tests/baselines/reference/ArrowFunction2.errors.txt
==== tests/cases/compiler/ArrowFunction2.ts (2 errors) ====
    var v = (a: b,) => {
                 ~
!!! ArrowFunction2.ts(1,14): error TS1009: Trailing comma not allowed.
                ~
!!! ArrowFunction2.ts(1,13): error TS2095: Cannot find name 'b'.
       
    };